--- a/pom.xml
+++ b/pom.xml
@@ -5,36 +5,19 @@
 	<parent>
 		<groupId>net.sf.taverna.t2</groupId>
 		<artifactId>interaction-service</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
 	<name>Example Taverna activity UI bindings</name>
 	
-    <properties>
-      <jettyVersion>6.1.24</jettyVersion>
-    </properties>
- 
 	
-
 	<dependencies>
-	    <dependency>
-      <groupId>org.mortbay.jetty</groupId>
-      <artifactId>jetty</artifactId>
-      <version>${jettyVersion}</version>
-    </dependency>
-     <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-        <version>1.6.1</version>
-        <scope>compile</scope>
-    </dependency>
-
 	
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>interaction-activity</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-api</groupId>
@@ -61,9 +44,18 @@
 			<artifactId>activity-tools</artifactId>
 			<version>${t2.ui.impl.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.sf.taverna.t2.taverna-commandline</groupId>
+            <artifactId>taverna-commandline-common</artifactId>
+		    <version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Workbench runtime for testing from IDE, remove if not using TavernaWorkbenchWithExamplePlugin.main() -->
 		<dependency>
+		    
+			
 			<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
 			<artifactId>workbench-dev</artifactId>
 			<version>${t2.workbench.version}</version>
