--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.taverna.t2</groupId>
 		<artifactId>interaction-service</artifactId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
@@ -14,10 +14,32 @@
 	
 	<dependencies>
 	
+			          <dependency>
+                <groupId>org.apache.abdera</groupId>
+                <artifactId>abdera-client</artifactId>
+                <version>1.1.2</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/abdera-client-1.1.2.jar</systemPath>
+                   </dependency>
+
+		    <dependency>
+              <groupId>org.apache.velocity</groupId>
+              <artifactId>velocity</artifactId>
+              <version>1.7</version>
+            </dependency>
+            
+            <dependency>
+	<groupId>velocity-tools</groupId>
+	<artifactId>velocity-tools-generic</artifactId>
+	<version>1.2</version>
+</dependency>
+
+	
+	
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>interaction-activity</artifactId>
-			<version>0.1-SNAPSHOT</version>
+			<version>0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-api</groupId>
@@ -67,6 +89,101 @@
             <artifactId>taverna-commandline-common</artifactId>
 		    <version>1.3</version>
 			<scope>test</scope>
+		</dependency>
+		
+				<!-- Workbench runtime for testing from IDE, remove if not using TavernaWorkbenchWithExamplePlugin.main() -->
+		<dependency>
+		    
+			
+			<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
+			<artifactId>workbench-dev</artifactId>
+			<version>${t2.workbench.version}</version>
+			<scope>test</scope>
+
+			<exclusions>
+
+				<!-- Disable various activities that are not relevant to testing our 
+					example activity. If you want to re-enable for instance WSDL activity, remember 
+					to comment out the exclusion for both wsdl-activity-ui and wsdl-activity 
+					further down. -->
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>apiconsumer-activity-ui</artifactId>
+				</exclusion>
+
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>biomoby-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>biomart-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>soaplab-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>ncbi-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>rshell-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>spreadsheet-import-activity-ui</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.ui-activities</groupId>
+					<artifactId>wsdl-activity-ui</artifactId>
+				</exclusion>
+
+				<!-- .. and the t2.activities counterparts -->
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>apiconsumer-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>biomoby-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>biomart-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>soaplab-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>ncbi-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>rshell-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>spreadsheet-import-activity</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>net.sf.taverna.t2.activities</groupId>
+					<artifactId>wsdl-activity</artifactId>
+				</exclusion>
+				<!-- Perspectives pulling in too many dependencies -->
+				<exclusion>
+				 	<!--  fails due to direct dependency to WSDL -->
+				 	<groupId>net.sf.taverna.t2.ui-exts</groupId>
+				 	<artifactId>perspective-biocatalogue</artifactId>
+				</exclusion>
+				<exclusion>
+				 	<groupId>net.sf.taverna.t2.ui-exts</groupId>
+				 	<artifactId>perspective-myexperiment</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
