--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.taverna.t2</groupId>
 		<artifactId>interaction-service</artifactId>
-		<version>0.1</version>
+		<version>0.1.1</version>
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>interaction-activity</artifactId>
-			<version>0.1</version>
+			<version>0.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-api</groupId>
@@ -90,7 +90,7 @@
 		    <version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-		
+				
 				<!-- Workbench runtime for testing from IDE, remove if not using TavernaWorkbenchWithExamplePlugin.main() -->
 		<dependency>
 		    
@@ -182,9 +182,23 @@
 				<exclusion>
 				 	<groupId>net.sf.taverna.t2.ui-exts</groupId>
 				 	<artifactId>perspective-myexperiment</artifactId>
+				</exclusion><!--
+				<exclusion>
+				<groupId>net.sf.taverna.t2.ui-impl</groupId>
+        <artifactId>plugins-gui</artifactId>
+				
 				</exclusion>
-			</exclusions>
+			--></exclusions>
 		</dependency>
+		
+		                <dependency>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>httpclient</artifactId>
+                        <version>4.1-beta1</version>
+                        <type>jar</type>
+                        <scope>compile</scope>
+                </dependency>
+		
 
 	</dependencies>
 </project>
