--- a/pom.xml
+++ b/pom.xml
@@ -5,41 +5,41 @@
 	<parent>
 		<groupId>net.sf.taverna.t2</groupId>
 		<artifactId>interaction-service</artifactId>
-		<version>0.1.4</version>
+		<version>0.1.6</version>
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
 	<name>Example Taverna activity UI bindings</name>
-	
-	
+
+
 	<dependencies>
-	
-			          <dependency>
-                <groupId>org.apache.abdera</groupId>
-                <artifactId>abdera-client</artifactId>
-                <version>1.1.2</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/abdera-client-1.1.2.jar</systemPath>
-                   </dependency>
 
-		    <dependency>
-              <groupId>org.apache.velocity</groupId>
-              <artifactId>velocity</artifactId>
-              <version>1.7</version>
-            </dependency>
-            
-            <dependency>
-	<groupId>velocity-tools</groupId>
-	<artifactId>velocity-tools-generic</artifactId>
-	<version>1.2</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.abdera</groupId>
+			<artifactId>abdera-client</artifactId>
+			<version>1.1.2</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/abdera-client-1.1.2.jar</systemPath>
+		</dependency>
 
-	
-	
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>velocity-tools</groupId>
+			<artifactId>velocity-tools-generic</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+
+
 		<dependency>
 			<groupId>net.sf.taverna.t2.activities</groupId>
 			<artifactId>interaction-activity</artifactId>
-			<version>0.1.4</version>
+			<version>0.1.6</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-api</groupId>
@@ -71,30 +71,33 @@
 			<artifactId>activity-tools</artifactId>
 			<version>${t2.ui.impl.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		        <groupId>net.sf.taverna.t2.ui-components</groupId>
-        <artifactId>workflow-view</artifactId>
-            <version>${t2.ui.components.version}</version>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>workflow-view</artifactId>
+			<version>${t2.ui.components.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		        <groupId>net.sf.taverna.t2.ui-components</groupId>
-        <artifactId>graph-view</artifactId>
-            <version>${t2.ui.components.version}</version>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>graph-view</artifactId>
+			<version>${t2.ui.components.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>net.sf.taverna.t2.taverna-commandline</groupId>
-            <artifactId>taverna-commandline-common</artifactId>
-		    <version>1.3</version>
+			<artifactId>taverna-commandline-common</artifactId>
+			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-				
-				<!-- Workbench runtime for testing from IDE, remove if not using TavernaWorkbenchWithExamplePlugin.main() -->
+
+		<!--
+			Workbench runtime for testing from IDE, remove if not using
+			TavernaWorkbenchWithExamplePlugin.main()
+		-->
 		<dependency>
-		    
-			
+
+
 			<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
 			<artifactId>workbench-dev</artifactId>
 			<version>${t2.workbench.version}</version>
@@ -102,10 +105,12 @@
 
 			<exclusions>
 
-				<!-- Disable various activities that are not relevant to testing our 
-					example activity. If you want to re-enable for instance WSDL activity, remember 
-					to comment out the exclusion for both wsdl-activity-ui and wsdl-activity 
-					further down. -->
+				<!--
+					Disable various activities that are not relevant to testing our
+					example activity. If you want to re-enable for instance WSDL
+					activity, remember to comment out the exclusion for both
+					wsdl-activity-ui and wsdl-activity further down.
+				-->
 				<exclusion>
 					<groupId>net.sf.taverna.t2.ui-activities</groupId>
 					<artifactId>apiconsumer-activity-ui</artifactId>
@@ -175,30 +180,29 @@
 				</exclusion>
 				<!-- Perspectives pulling in too many dependencies -->
 				<exclusion>
-				 	<!--  fails due to direct dependency to WSDL -->
-				 	<groupId>net.sf.taverna.t2.ui-exts</groupId>
-				 	<artifactId>perspective-biocatalogue</artifactId>
+					<!--  fails due to direct dependency to WSDL -->
+					<groupId>net.sf.taverna.t2.ui-exts</groupId>
+					<artifactId>perspective-biocatalogue</artifactId>
 				</exclusion>
 				<exclusion>
-				 	<groupId>net.sf.taverna.t2.ui-exts</groupId>
-				 	<artifactId>perspective-myexperiment</artifactId>
-				</exclusion><!--
-				<exclusion>
-				<groupId>net.sf.taverna.t2.ui-impl</groupId>
-        <artifactId>plugins-gui</artifactId>
-				
+					<groupId>net.sf.taverna.t2.ui-exts</groupId>
+					<artifactId>perspective-myexperiment</artifactId>
 				</exclusion>
-			--></exclusions>
+				<!--
+					<exclusion> <groupId>net.sf.taverna.t2.ui-impl</groupId>
+					<artifactId>plugins-gui</artifactId> </exclusion>
+				-->
+			</exclusions>
 		</dependency>
-		
-		                <dependency>
-                        <groupId>org.apache.httpcomponents</groupId>
-                        <artifactId>httpclient</artifactId>
-                        <version>4.1-beta1</version>
-                        <type>jar</type>
-                        <scope>compile</scope>
-                </dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1-beta1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
 
 	</dependencies>
 </project>
