Secured jetty and tweaks to contextual and config
git-svn-id: http://taverna.googlecode.com/svn/unsorted/interaction-service/trunk/interaction-activity-ui@15319 bf327186-88b3-11dd-a302-d386e5130c1c

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
+			<artifactId>credential-manager-ui</artifactId>
+			<version>${t2.ui.components.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>workflow-view</artifactId>
 			<version>1.4</version>
 		</dependency>
