Attempt to switch to later Jetty
git-svn-id: http://taverna.googlecode.com/svn/unsorted/interaction-service/trunk/interaction-activity-ui@15333 bf327186-88b3-11dd-a302-d386e5130c1c

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,16 @@
 			<artifactId>taverna-commandline-common</artifactId>
 			<version>1.4</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
@@ -248,6 +258,14 @@
 					<exclusion> <groupId>net.sf.taverna.t2.ui-impl</groupId>
 					<artifactId>plugins-gui</artifactId> </exclusion>
 				-->
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
