--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>net.sf.taverna.t2</groupId>
-		<artifactId>interaction-service</artifactId>
-		<version>1.0.4</version>
+		<artifactId>ui-activities</artifactId>
+		<version>1.5-SNAPSHOT</version>
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
@@ -70,149 +70,19 @@
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>workflow-view</artifactId>
-			<version>1.4</version>
+			<version>${t2.ui.components.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>net.sf.taverna.t2.ui-components</groupId>
 			<artifactId>graph-view</artifactId>
-			<version>1.4.1</version>
-		</dependency>
-		
-	<dependency>
-			<groupId>net.sf.taverna.t2.taverna-commandline</groupId>
-			<artifactId>taverna-commandline-common</artifactId>
-			<version>1.4</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
+			<version>${t2.ui.components.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.6.2</version>
-		</dependency>
-
-		
-
-		<!--
-			Workbench runtime for testing from IDE, remove if not using
-			TavernaWorkbenchWithExamplePlugin.main()
-		-->
-		<dependency>
-
-
-			<groupId>net.sf.taverna.t2.taverna-workbench</groupId>
-			<artifactId>workbench-dev</artifactId>
-			<version>${t2.workbench.version}</version>
-			<scope>test</scope>
-			<exclusions>
-
-				<!--
-					Disable various activities that are not relevant to testing our
-					example activity. If you want to re-enable for instance WSDL
-					activity, remember to comment out the exclusion for both
-					wsdl-activity-ui and wsdl-activity further down.
-				-->
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>apiconsumer-activity-ui</artifactId>
-				</exclusion>
-
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>biomoby-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>biomart-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>soaplab-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>ncbi-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>rshell-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>spreadsheet-import-activity-ui</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-activities</groupId>
-					<artifactId>wsdl-activity-ui</artifactId>
-				</exclusion>
-
-				<!-- .. and the t2.activities counterparts -->
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>apiconsumer-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>biomoby-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>biomart-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>soaplab-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>ncbi-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>rshell-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>spreadsheet-import-activity</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.activities</groupId>
-					<artifactId>wsdl-activity</artifactId>
-				</exclusion>
-				<!-- Perspectives pulling in too many dependencies -->
-				<exclusion>
-					<!--  fails due to direct dependency to WSDL -->
-					<groupId>net.sf.taverna.t2.ui-exts</groupId>
-					<artifactId>perspective-biocatalogue</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>net.sf.taverna.t2.ui-exts</groupId>
-					<artifactId>perspective-myexperiment</artifactId>
-				</exclusion>
-				<!--
-					<exclusion> <groupId>net.sf.taverna.t2.ui-impl</groupId>
-					<artifactId>plugins-gui</artifactId> </exclusion>
-				-->
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>slf4j-log4j12</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<dependency>
