--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
-	<name>Example Taverna activity UI bindings</name>
+	<name>Taverna 2 Interaction activity UI bindings</name>
 
 
 	<dependencies>
