Removed 2 from name

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>net.sf.taverna.t2.ui-activities</groupId>
 	<artifactId>interaction-activity-ui</artifactId>
-	<name>Taverna 2 Interaction activity UI bindings</name>
+	<name>Taverna Interaction activity UI bindings</name>
         <version>1.6-SNAPSHOT</version>
         <dependencies>
 		<dependency>
